# gcode_wristbands

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
docs/: tips_gcode.md  tips_stl.md
uwr_wristband/: __init__.py  defaults.py  generator.py  logo.py  printers.py  stl_export.py  visualization.py
