[project]
name = "uwr-wristband"
version = "1.0.0"
description = "Streamlit web app for generating 3D-printed UWR wristband G-code"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.30.0",
    "fullcontrol>=0.1.1",
    "numpy",
    "matplotlib",
    "shapely>=2.0",
    "plotly",
]

[project.urls]
Homepage = "https://github.com/gruensil/gcode_wristbands"
Repository = "https://github.com/gruensil/gcode_wristbands"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
